--- a/assets/modules/redirectMap2/template/main.html
+++ b/assets/modules/redirectMap2/template/main.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="/assets/modules/redirectMap2/public/init.css"/>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"
         charset="utf-8"></script>
 <script>
     $.URLAction = {
